src/test/resources/kubeflow-environment/oauth2_proxy.yml
injectResponseHeaders:
  - name: kubeflow-groups
    values:
    - claim: groups
  - name: kubeflow-userid
    values:
    - claim: email
metricsServer:
  BindAddress: 0.0.0.0:44180
  SecureBindAddress: ""
  TLS: null
providers:
# ==== Keycloak configuration
- clientID: kubeflow
  clientSecretFile: /etc/oauth2_proxy/CLIENT_SECRET
  id: oidc=kubeflow
  loginURL: /auth/realms/kubeflow/protocol/openid-connect/auth
  loginURLParameters:
  - default:
    - force
    name: approval_prompt
  oidcConfig:
    audienceClaims:
    - aud
    emailClaim: email
    groupsClaim: groups
    issuerURL: http://localhost:30000/auth/realms/kubeflow
    jwksURL: http://keycloak.keycloak.svc.cluster.local:8080/auth/realms/kubeflow/protocol/openid-connect/certs
    skipDiscovery: true
    userIDClaim: email
  scope: openid profile email groups
  provider: oidc
  redeemURL: http://keycloak.keycloak.svc.cluster.local:8080/auth/realms/kubeflow/protocol/openid-connect/token
server:
  BindAddress: 0.0.0.0:8080
  SecureBindAddress: ""
  TLS: null
upstreamConfig:
  upstreams:
  - id: static://200
    path: /
    static: true
    staticCode: 200
